# Diplomsko-Delo

./: .gitignore  CMakeLists.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/clusteringandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bindings.cpp
app/src/main/cpp/clustering/: clustering.cpp  clustering.h
app/src/main/java/com/example/clusteringandroid/: MainActivity.kt
app/src/main/java/com/example/clusteringandroid/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/clusteringandroid/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
src/: main.cpp
src/clustering/: clustering.cpp  clustering.h
src/fastmarhcing/: FastMarching.cpp  FastMarching.h  main_fm.cpp
